fix: adjust footer size on mobile

--- a/content/assets/css/styles.css
+++ b/content/assets/css/styles.css
@@ -165,6 +165,7 @@
 
   .wave-footer {
     margin-top: 10%;
+    margin-bottom: -2px;
     width: 100%;
   }
   
